[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fireplace/Art/Fireplace.png" type="Texture" id=1]
[ext_resource path="res://Fireplace/Sound/FireplaceSoundEffect.wav" type="AudioStream" id=2]
[ext_resource path="res://Fireplace/Scene/Fireplace.gd" type="Script" id=3]
[ext_resource path="res://Fireplace/Art/InteractionKey.png" type="Texture" id=4]
[ext_resource path="res://Player/Art/PlayerLight.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45.8412, 11.2989 )

[node name="Fireplace" type="Area2D"]
script = ExtResource( 3 )

[node name="FireplaceSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="FireplaceCollider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FireplaceSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
autoplay = true
attenuation = 6.72713
bus = "Ambient Sounds"
__meta__ = {
"_edit_lock_": true
}

[node name="InteractionKeySprite" type="Sprite" parent="."]
position = Vector2( 0, -13 )
texture = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 5 )
texture_scale = 0.43
color = Color( 0.933333, 0.662745, 0.0235294, 1 )
energy = 2.0
[connection signal="body_entered" from="." to="." method="_on_Fireplace_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Fireplace_body_exited"]
